--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url: jdbc:mysql://localhost:3306/game_store?useSSL=false\
+spring.datasource.url: jdbc:mysql://localhost:3306/game_store_test?useSSL=false\
   &useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username: root
 spring.datasource.password: rootroot
