--- a/game-store-0.1.0.yaml
+++ b/game-store-0.1.0.yaml
@@ -2,7 +2,9 @@ openapi: 3.0.0
 info:
   title: Game Store
   description: Rene Serulle U1 Capstone. This is a REST Inventory Management Web Service for a Video Game Store
-  version: 0.0.1
+  contact:
+    email: rene+GameStoreSupport@insomnyak.com
+  version: 0.1.0
 servers:
   - url: 'http://localhost:8080'
     description: local dev server
@@ -18,6 +20,17 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ItemTypes'
+  /salesTaxRate:
+    get:
+      summary: returns Tax Rates and State Code for every State in which this Game Store conducts business
+      responses:
+        '200':
+          description: List of all sales tax rates
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SalesTaxRate'
+
   /item/{type}:
     get:
       summary: returns all items of the specified type
@@ -118,16 +131,9 @@ paths:
         '404':
           description: Id not found
 
-  /item/inventory{type}:
+  /item/inventory:
     post:
       summary: adds items of the specified type
-      parameters:
-        - name: type
-          in: path
-          required: true
-          description: The item type
-          schema:
-            type: string
       requestBody:
         required: true
         content:
@@ -148,7 +154,7 @@ paths:
         '415':
           description: Unsupported media type, the request body should be json
     put:
-      summary: updates an existing game(s)
+      summary: updates an existing item(s)
       parameters:
         - name: type
           in: path
@@ -172,16 +178,10 @@ paths:
         '415':
           description: Unsupported media type, the request body should be json
 
-  /item/inventory/{type}/{id}:
+  /item/inventory/{id}:
     delete:
       summary: deletes an item from the DB of specified type and id
       parameters:
-        - name: type
-          in: path
-          required: true
-          description: The item type
-          schema:
-            type: string
         - name: id
           in: path
           required: true
@@ -226,6 +226,9 @@ components:
     Game:
       type: object
       properties:
+        '$type':
+          type: string
+          description: value must be 'Game'
         gameId:
           type: integer
           maxLength: 11
@@ -249,6 +252,7 @@ components:
           type: number
           format: '#####.##'
       required:
+        - '$type'
         - title
         - esrbRating
         - description
@@ -258,6 +262,9 @@ components:
     Console:
       type: object
       properties:
+        '$type':
+          type: string
+          description: value must be 'Console'
         consoledId:
           type: integer
           maxLength: 11
@@ -277,6 +284,7 @@ components:
           type: number
           format: '#####.##'
       required:
+        - '$type'
         - model
         - manufacturer
         - price
@@ -284,6 +292,9 @@ components:
     TShirt:
       type: object
       properties:
+        '$type':
+          type: string
+          description: value must be 'TShirt'
         tShirtId:
           type: integer
           maxLength: 11
@@ -301,6 +312,7 @@ components:
           type: number
           format: '#####.##'
       required:
+        - '$type'
         - size
         - color
         - description
@@ -323,6 +335,10 @@ components:
     Attributes:
       type: array
       items:
+        type: string
+    SalesTaxRate:
+      type: object
+      additionalProperties:
         type: string
     Purchase:
       type: object
@@ -381,4 +397,5 @@ components:
         - itemType
         - itemId
         - quantity
+
 
