--- a/game-store-0.1.1.yaml
+++ b/game-store-0.1.1.yaml
@@ -4,7 +4,7 @@ info:
   description: Rene Serulle U1 Capstone. This is a REST Inventory Management Web Service for a Video Game Store
   contact:
     email: rene+GameStoreSupport@insomnyak.com
-  version: 0.1.0
+  version: 0.1.1
 servers:
   - url: 'http://localhost:8080'
     description: local dev server
@@ -29,7 +29,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SalesTaxRate'
+                $ref: '#/components/schemas/SalesTaxRateMap'
   /processingFee:
     get:
       summary: returns each Item Type and its respective processing fee
@@ -39,7 +39,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ProcessingFee'
+                $ref: '#/components/schemas/ProcessingFeeMap'
 
   /item/{type}:
     get:
@@ -236,6 +236,8 @@ paths:
           description: Missing a field
         '415':
           description: Unsupported media type, the request body should be json
+        '503':
+          description: thrown if processing the full state name is not currently available. Use the state 2-letter code instead
 
   /purchase/invoice:
     get:
@@ -270,6 +272,202 @@ paths:
         '404':
           description: invoice not found
 
+  /inventory/processingFee:
+    post:
+      summary: add new productType with it's processing fee. If the productType already exists, an update is performed instead.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProcessingFee'
+      responses:
+        '200':
+          description: succesful request. Processing fee updated.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProcessingFee'
+        '201':
+          description: successful request. New processing fee created.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProcessingFee'
+        '400':
+          description: Bad Request
+        '422':
+          description: Missing a field
+        '415':
+          description: Unsupported media type, the request body should be json
+    get:
+      summary: returns all available Sales Tax Rates
+      responses:
+        '200':
+          description: List of all Sales Tax Rates
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SalesTaxRate'
+
+  /inventory/processingFee/{value}:
+    get:
+      summary: returns the processing fee for the given itemType.
+      parameters:
+        - name: value
+          in: path
+          required: true
+          description: the itemType.
+          schema:
+            type: string
+      responses:
+        '200':
+          description: found Processing Fee
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProcessingFee'
+        '404':
+          description: invoice not found
+    put:
+      summary: updates an existing Processing Fee
+      parameters:
+        - name: value
+          in: path
+          required: true
+          description: The itemType
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProcessingFee'
+      responses:
+        '204':
+          description: the Processing Fee was successfully updated
+        '400':
+          description: Bad Request
+        '422':
+          description: Missing a field
+        '415':
+          description: Unsupported media type, the request body should be json
+    delete:
+      summary: deletes a processing fee with the given itemType
+      parameters:
+        - name: value
+          in: path
+          required: true
+          description: The itemType
+          schema:
+            type: string
+      responses:
+        '204':
+          description: delete successful
+        '400':
+          description: Bad Request
+        '404':
+          description: Id not found
+
+  /inventory/salesTaxRate:
+    post:
+      summary: add new state sales tax rate. If the state code exists already, an update is performed instead.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SalesTaxRate'
+      responses:
+        '200':
+          description: succesful request. Sales tax rate updated.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SalesTaxRate'
+        '201':
+          description: successful request. New sales tax rate created.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SalesTaxRate'
+        '400':
+          description: Bad Request
+        '422':
+          description: Missing a field
+        '415':
+          description: Unsupported media type, the request body should be json
+    get:
+      summary: returns all available Sales Tax Rates
+      responses:
+        '200':
+          description: List of all Sales Tax Rates
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SalesTaxRate'
+
+  /inventory/salesTaxRate/{value}:
+    get:
+      summary: returns a sales rate tax for the given stateCode.
+      parameters:
+        - name: value
+          in: path
+          required: true
+          description: The 2-letter state abbreviation
+          schema:
+            type: string
+      responses:
+        '200':
+          description: found Sales Tax Rate
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SalesTaxRate'
+        '404':
+          description: invoice not found
+    put:
+      summary: updates an existing Sales Tax Rate
+      parameters:
+        - name: value
+          in: path
+          required: true
+          description: The 2-letter state abbreviation
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SalesTaxRate'
+      responses:
+        '204':
+          description: the sales tax rate was successfully updated
+        '400':
+          description: Bad Request
+        '422':
+          description: Missing a field
+        '415':
+          description: Unsupported media type, the request body should be json
+    delete:
+      summary: deletes a sales tax rate with the given stateCode
+      parameters:
+        - name: value
+          in: path
+          required: true
+          description: The 2-letter state abbreviation
+          schema:
+            type: string
+      responses:
+        '204':
+          description: delete successful
+        '400':
+          description: Bad Request
+        '404':
+          description: Id not found
+
 components:
   schemas:
     Game:
@@ -299,7 +497,7 @@ components:
           maxLength: 11
         price:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
       required:
         - '$type'
         - title
@@ -319,19 +517,25 @@ components:
           maxLength: 11
         model:
           type: string
+          minLength: 1
+          maxLength: 50
         manufacturer:
           type: string
+          minLength: 1
+          maxLength: 50
         memoryAmount:
           type: string
+          maxLength: 20
         processor:
           type: string
+          maxLength: 20
         quantity:
           type: integer
           minimum: 1
           maxLength: 11
         price:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
       required:
         - '$type'
         - model
@@ -349,17 +553,23 @@ components:
           maxLength: 11
         size:
           type: string
+          minLength: 1
+          maxLength: 20
         color:
           type: string
+          minLength: 1
+          maxLength: 20
         description:
           type: string
+          minLength: 1
+          maxLength: 255
         quantity:
           type: integer
           minimum: 1
           maxLength: 11
         price:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
       required:
         - '$type'
         - size
@@ -385,14 +595,39 @@ components:
       type: array
       items:
         type: string
-    SalesTaxRate:
+    SalesTaxRateMap:
+      type: object
+      additionalProperties:
+        type: string
+    ProcessingFeeMap:
       type: object
       additionalProperties:
         type: string
     ProcessingFee:
       type: object
-      additionalProperties:
-        type: string
+      properties:
+        '$type':
+          type: string
+          description: value must be 'Processing Fee'
+        productType:
+          type: string
+          minLength: 1
+          maxLength: 20
+        fee:
+          type: number
+          pattern: '[0-9]{2}[.][0-9]{2}'
+    SalesTaxRate:
+      type: object
+      properties:
+        '$type':
+          type: string
+          description: value must be 'Sales Tax Rate'
+        state:
+          type: string
+          pattern: '[A-Z]{2}'
+        rate:
+          type: number
+          pattern: '[0-9]{1}[.][0-9]{2}'
     Purchase:
       type: object
       properties:
@@ -411,6 +646,7 @@ components:
         state:
           type: string
           maxLength: 30
+          description: The state should be the 2-letter abbreviation of the state. However, the service does allow the full state name as well. The service replaces [-+_] with a space character. It replaces periods with a blank character.
         zipcode:
           type: string
           maxLength: 5
@@ -424,23 +660,23 @@ components:
           maxLength: 11
         unitPrice:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
         quantity:
           type: integer
           minimum: 1
           maxLength: 11
         subtotal:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
         tax:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
         processingFee:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
         total:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
       required:
         - name
         - street
@@ -450,5 +686,6 @@ components:
         - itemType
         - itemId
         - quantity
+      
 
-
+        
