--- a/game-store-0.1.2.yaml
+++ b/game-store-0.1.2.yaml
@@ -4,7 +4,7 @@ info:
   description: Rene Serulle U1 Capstone. This is a REST Inventory Management Web Service for a Video Game Store
   contact:
     email: rene+GameStoreSupport@insomnyak.com
-  version: 0.1.0
+  version: 0.1.2
 servers:
   - url: 'http://localhost:8080'
     description: local dev server
@@ -29,7 +29,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SalesTaxRate'
+                $ref: '#/components/schemas/SalesTaxRateMap'
   /processingFee:
     get:
       summary: returns each Item Type and its respective processing fee
@@ -39,7 +39,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ProcessingFee'
+                $ref: '#/components/schemas/ProcessingFeeMap'
 
   /item/{type}:
     get:
@@ -236,6 +236,8 @@ paths:
           description: Missing a field
         '415':
           description: Unsupported media type, the request body should be json
+        '503':
+          description: thrown if processing the full state name is not currently available. Use the state 2-letter code instead
 
   /purchase/invoice:
     get:
@@ -270,6 +272,115 @@ paths:
         '404':
           description: invoice not found
 
+  /inventory/fee:
+    post:
+      summary: add new fees. If a fee already exists, an update is performed instead.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/FeeTypes'
+      responses:
+        '201':
+          description: successful request. New fees created or updated.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FeeTypes'
+        '400':
+          description: Bad Request
+        '422':
+          description: Missing a field
+        '415':
+          description: Unsupported media type, the request body should be json
+    put:
+      summary: updates existing fees
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/FeeTypeMap'
+      responses:
+        '204':
+          description: the fees were successfully updated
+        '400':
+          description: Bad Request
+        '422':
+          description: Missing a field
+        '415':
+          description: Unsupported media type, the request body should be json
+
+  /inventory/{feeType}:
+    get:
+      summary: returns all available fees of specified type
+      parameters:
+        - name: feeType
+          in: path
+          required: true
+          description: The type of fee
+          schema:
+            type: string
+            example: possibles values are 'Processing Fee' or 'Sales Tax Rate'
+      responses:
+        '200':
+          description: List of all fees of specified type
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FeeType'
+
+  /inventory/{feeType}/{value}:
+    get:
+      summary: returns the fee or specified type and value.
+      parameters:
+        - name: feeType
+          in: path
+          required: true
+          description: The type of fee
+          schema:
+            type: string
+            example: possibles values are 'Processing Fee' or 'Sales Tax Rate'
+        - name: value
+          in: path
+          required: true
+          description: the value to search for.
+          schema:
+            type: string
+      responses:
+        '200':
+          description: found the fee
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FeeType'
+        '404':
+          description: fee not found
+    delete:
+      summary: deletes a fee of specified type with the given value
+      parameters:
+        - name: feeType
+          in: path
+          required: true
+          description: The type of fee
+          schema:
+            type: string
+            example: possibles values are 'Processing Fee' or 'Sales Tax Rate'
+        - name: value
+          in: path
+          required: true
+          description: The value to search for
+          schema:
+            type: string
+      responses:
+        '204':
+          description: delete successful
+        '400':
+          description: Bad Request
+        '404':
+          description: Id not found
+
 components:
   schemas:
     Game:
@@ -299,7 +410,7 @@ components:
           maxLength: 11
         price:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
       required:
         - '$type'
         - title
@@ -319,19 +430,25 @@ components:
           maxLength: 11
         model:
           type: string
+          minLength: 1
+          maxLength: 50
         manufacturer:
           type: string
+          minLength: 1
+          maxLength: 50
         memoryAmount:
           type: string
+          maxLength: 20
         processor:
           type: string
+          maxLength: 20
         quantity:
           type: integer
           minimum: 1
           maxLength: 11
         price:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
       required:
         - '$type'
         - model
@@ -349,17 +466,23 @@ components:
           maxLength: 11
         size:
           type: string
+          minLength: 1
+          maxLength: 20
         color:
           type: string
+          minLength: 1
+          maxLength: 20
         description:
           type: string
+          minLength: 1
+          maxLength: 255
         quantity:
           type: integer
           minimum: 1
           maxLength: 11
         price:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
       required:
         - '$type'
         - size
@@ -385,14 +508,53 @@ components:
       type: array
       items:
         type: string
-    SalesTaxRate:
+    SalesTaxRateMap:
+      type: object
+      additionalProperties:
+        type: string
+    ProcessingFeeMap:
       type: object
       additionalProperties:
         type: string
     ProcessingFee:
       type: object
+      properties:
+        '$type':
+          type: string
+          description: value must be 'Processing Fee'
+        productType:
+          type: string
+          minLength: 1
+          maxLength: 20
+        fee:
+          type: number
+          pattern: '[0-9]{2}[.][0-9]{2}'
+    SalesTaxRate:
+      type: object
+      properties:
+        '$type':
+          type: string
+          description: value must be 'Sales Tax Rate'
+        state:
+          type: string
+          pattern: '[A-Z]{2}'
+        rate:
+          type: number
+          pattern: '[0-9]{1}[.][0-9]{2}'
+    FeeType:
+      type: object
+      oneOf:
+        - $ref: '#/components/schemas/ProcessingFee'
+        - $ref: '#/components/schemas/SalesTaxRate'
+    FeeTypes:
+      type: array
+      items:
+        $ref: '#/components/schemas/FeeType'
+    FeeTypeMap:
+      type: object
+      description: key is the lookup value that will be used to find the Fee. If the lookup value changed, the the key is the original value.
       additionalProperties:
-        type: string
+        $ref: '#/components/schemas/FeeType'
     Purchase:
       type: object
       properties:
@@ -411,6 +573,7 @@ components:
         state:
           type: string
           maxLength: 30
+          description: The state should be the 2-letter abbreviation of the state. However, the service does allow the full state name as well. The service replaces [-+_] with a space character. It replaces periods with a blank character.
         zipcode:
           type: string
           maxLength: 5
@@ -424,23 +587,23 @@ components:
           maxLength: 11
         unitPrice:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
         quantity:
           type: integer
           minimum: 1
           maxLength: 11
         subtotal:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
         tax:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
         processingFee:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
         total:
           type: number
-          format: '#####.##'
+          pattern: '[0-9]{3}[.][0-9]{2}'
       required:
         - name
         - street
