--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username: root
 spring.datasource.password: rootroot
 # spring.datasource.driver-class-name: com.mysql.jdbc.Driver
 
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
